--- a/styles/style.css
+++ b/styles/style.css
@@ -273,3 +273,32 @@ nav ul li a {
     opacity: 1;
     transform: translate(-50%, -130%);
   }
+
+
+  .card {
+    background-color: #fff;
+    border-radius: 0.25rem;
+    box-shadow: 0 0.5em 1em -0.125em rgb(10 10 10 / 10%), 0 0 0 1px rgb(10 10 10 / 2%);
+    color: #4a4a4a;
+    position: relative;
+    height:40%;
+}
+.card-content{
+  position: relative;
+}
+
+.column {
+  float: left;
+  width: 25%;
+  padding: 0 10px;
+  display: block;
+  margin-bottom: 20px;
+}
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Remove extra left and right margins, due to padding in columns */
+.row {margin: 0 -5px;}
